# ik-geo-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: correctness.rs  interface_tests.rs  lib.rs  robot.rs  solutionset.rs
src/inverse_kinematics/: auxiliary.rs  mod.rs  setups.rs
src/inverse_kinematics/hardcoded/: mod.rs  setups.rs
src/subproblems/: auxiliary.rs  mod.rs  setups.rs
